--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/compiler": "^18.1.0",
     "@angular/compiler-cli": "^18.1.0",
     "@angular/core": "^18.1.0",
+    "@angular-devkit/build-angular": "^18.1.4",
     "@angular/forms": "^18.1.0",
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
