--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^18.1.4",
     "@angular/animations": "^18.1.0",
     "@angular/cli": "^18.1.4",
     "@angular/common": "^18.1.0",
     "@angular/compiler": "^18.1.0",
     "@angular/compiler-cli": "^18.1.0",
     "@angular/core": "^18.1.0",
-    "@angular-devkit/build-angular": "^18.1.4",
     "@angular/forms": "^18.1.0",
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
@@ -32,16 +32,19 @@
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^18.1.4",
     "@angular/cli": "^18.1.4",
     "@angular/compiler-cli": "^18.1.0",
-    "@angular-devkit/build-angular": "^18.1.4",
     "@types/jasmine": "~5.1.0",
+    "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "typescript": "~5.5.2"
   },
   "engines": {
