--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "chart.js": "^4.5.1",
     "express": "^5.1.0",
     "path": "^0.12.7",
     "rxjs": "~7.8.0",
